[workspace]
members = [
    "openssl",
    "openssl-errors",
    "openssl-macros",
    "openssl-sys",
    "systest",
]

[patch.crates-io.bindgen]
git = "https://github.com/daviddrysdale/rust-bindgen"
branch = "allowlist-file"

[patch.crates-io.openssl-src]
path = "../openssl-src-rs"
# git = "https://github.com/otak/openssl-src-rs"
# branch = "otak/wasi-compat"
