[workspace]
members = [
    "openssl",
    "openssl-errors",
    "openssl-macros",
    "openssl-sys",
    "systest",
]

[patch.crates-io.bindgen]
git = "https://github.com/daviddrysdale/rust-bindgen"
branch = "allowlist-file"

[patch.crates-io.openssl-src-111]
# path = "../openssl-src-rs"
package = "openssl-src"
version = "=111.19.0"
git = "https://github.com/otak/openssl-src-rs"
branch = "otak/wasi-fix-111"

[patch.crates-io.openssl-src-300]
# path = "../openssl-src-rs"
package = "openssl-src"
version = "=300.0.6"
git = "https://github.com/otak/openssl-src-rs"
branch = "otak/wasi-fix-300"
