[package]
name = "openssl-sys"
version = "0.10.0"
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "Steven Fackler <sfackler@gmail.com>",
]
license = "MIT"
description = "FFI bindings to OpenSSL"
repository = "https://github.com/sfackler/rust-openssl"
readme = "README.md"
categories = ["cryptography", "external-ffi-bindings"]
links = "openssl"
build = "build/main.rs"

[features]
vendored = ["vendored-111"]
vendored-111 = ["openssl-src-111"]
vendored-300 = ["openssl-src-300"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.59.2", optional = true }
cc = "1.0"
openssl-src-111 = { package = "openssl-src", version = "=111.19.0", optional = true }
openssl-src-300 = { package = "openssl-src", version = "=300.0.6", optional = true }
pkg-config = "0.3.9"
autocfg = "1.0"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2.8"

# We don't actually use metadeps for annoying reasons but this is still here for tooling
[package.metadata.pkg-config]
openssl = "1.0.1"
