[package]
name = "systest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
openssl-sys = { path = "../openssl-sys" }

[build-dependencies]
ctest2 = "0.4"

[features]
vendored = ["vendored-111"]
vendored-111 = ["openssl-sys/vendored-111"]
vendored-300 = ["openssl-sys/vendored-300"]
bindgen = ["openssl-sys/bindgen"]
